[gd_scene load_steps=10 format=3 uid="uid://b2n4mayupn08l"]

[ext_resource type="Script" path="res://scripts/player/sineWave.gd" id="1_gnca7"]
[ext_resource type="Script" path="res://scripts/levels/4-3_minigame4.gd" id="1_jh4t7"]
[ext_resource type="Texture2D" uid="uid://bfby0ae6y8hwj" path="res://assets/images/sprites/minigame_4/controlinterface.png" id="2_0nmbd"]
[ext_resource type="Texture2D" uid="uid://b7qsfah6vnkj" path="res://assets/images/sprites/minigame_4/dial.png" id="3_fpmco"]
[ext_resource type="Texture2D" uid="uid://dhaj7ugamct2f" path="res://assets/images/dialogue/messageBox.png" id="5_0twfq"]
[ext_resource type="Theme" uid="uid://dvij0s1xehu3a" path="res://assets/themes/subheaderTheme.tres" id="6_2t64u"]

[sub_resource type="Animation" id="Animation_t1e7d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_e3b3s"]
resource_name = "fadeout"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_61oh3"]
_data = {
"RESET": SubResource("Animation_t1e7d"),
"fadeout": SubResource("Animation_e3b3s")
}

[node name="level" type="Node2D"]
position = Vector2(1683, 248)
script = ExtResource("1_jh4t7")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Black" type="ColorRect" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Solution" type="Line2D" parent="UI"]
position = Vector2(0, 400)
default_color = Color(1, 0, 0.168627, 1)
script = ExtResource("1_gnca7")

[node name="Attempt" type="Line2D" parent="UI"]
position = Vector2(0, 400)
default_color = Color(0.0666667, 0, 1, 1)
script = ExtResource("1_gnca7")

[node name="Background" type="TextureRect" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_0nmbd")

[node name="aKnob" type="TextureButton" parent="UI"]
offset_left = 400.0
offset_top = 750.0
offset_right = 600.0
offset_bottom = 950.0
pivot_offset = Vector2(100, 100)
tooltip_text = "Amplitude"
texture_normal = ExtResource("3_fpmco")
stretch_mode = 0

[node name="bKnob" type="TextureButton" parent="UI"]
offset_left = 1350.0
offset_top = 750.0
offset_right = 1550.0
offset_bottom = 950.0
pivot_offset = Vector2(100, 100)
tooltip_text = "Wavelength"
texture_normal = ExtResource("3_fpmco")
stretch_mode = 0

[node name="Message" type="TextureRect" parent="UI"]
anchors_preset = -1
anchor_left = 0.156
anchor_top = 0.109
anchor_right = 0.844
anchor_bottom = 0.294
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_0twfq")

[node name="Label" type="Label" parent="UI/Message"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_2t64u")
text = "Objective: Align the blue wave with red"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/Message"]
libraries = {
"": SubResource("AnimationLibrary_61oh3")
}
autoplay = "fadeout"

[connection signal="pressed" from="UI/aKnob" to="." method="_on_knob_a_pressed"]
[connection signal="pressed" from="UI/bKnob" to="." method="_on_knob_b_pressed"]
